--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <title>WEB1</title>
   <meta charset="utf-8">
 </head>
+<p>
+<iframe src="https://www.pornhub.com/embed/ph5effad45a6987" frameborder="0" width="560" height="315" scrolling="no" allowfullscreen></iframe>
+</p>
+
 <body>
   <h1><a href="index.html" >WEB</a></h1>
   <ol>
@@ -13,4 +17,6 @@
   </ol>
   <h2>HTML</h2>
   <p>웹은 엄청크다</p>
+<input type="checkbox">
+
 </body>
